objects/QuoteLineItem/fields/Discount_Catergory__c.field-meta.xml
<CustomField>
    <fullName>Discount_Catergory__c</fullName>
    <label>Discount Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per SKU</fullName>
            </value>
            <value>
                <fullName>% Value</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>