objects/QuoteLineItem/fields/Discount_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Discount_per_Unit__c</fullName>
    <formula>Discount_Value__c / Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>