objects/QuoteLineItem/fields/FET_Rate__c.field-meta.xml
<CustomField>
    <fullName>FET_Rate__c</fullName>
    <formula>Product2.FET_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FET Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>