objects/QuoteLineItem/fields/FET_Total__c.field-meta.xml
<CustomField>
    <fullName>FET_Total__c</fullName>
    <formula>FET_Rate__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FET Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>