objects/QuoteLineItem/fields/Hide_from_PDF__c.field-meta.xml
<CustomField>
    <fullName>Hide_from_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide from PDF</label>
    <type>Checkbox</type>
</CustomField>