objects/QuoteLineItem/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <formula>Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Description</label>
    <type>Text</type>
</CustomField>