objects/QuoteLineItem/fields/Net_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Selling_Price__c</fullName>
    <label>Net Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>