objects/QuoteLineItem/fields/Parent_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>