objects/QuoteLineItem/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <formula>Product2.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product SKU</label>
    <type>Text</type>
</CustomField>