objects/QuoteLineItem/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>(UnitPrice - Round(Discount_per_Unit__c,2) )* Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>