objects/QuoteLineItem/fields/Total_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Price__c</fullName>
    <formula>ROUND(Net_Price__c,2) * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>