objects/QuoteLineItem/validationRules/Min_Price_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Price_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Selling_Price__c &lt; 40</errorConditionFormula>
    <errorMessage>Price Cannot be below Minimum price ($40)</errorMessage>
</ValidationRule>